--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,10 @@
     <groupId>com.pruebatecnica</groupId>
     <artifactId>pruebatecnica</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
     <dependencies>
     <!-- Karate -->
